--- a/lazy_ilya/myauth/templates/myauth/base.html
+++ b/lazy_ilya/myauth/templates/myauth/base.html
@@ -1,25 +1,23 @@
 {% load static %}
 
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="{% static 'myauth/images/favicon.ico' %}">
-
-
-    <title>{% block title %}Base title{% endblock %}</title>
-  <script type="module" crossorigin src="{% static 'myauth/js/main.js' %}"></script>
-  <link rel="stylesheet" crossorigin href="{% static 'myauth/css/styles.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'myauth/images/favicon-r8WDt7cH.ico' %}">
+    <title>{% block title %}Базовый шаблон{% endblock %}</title>
+    <script type="module" crossorigin src="{% static 'myauth/js/base-D5A27XBB.js' %}"></script>
+    <link rel="stylesheet" crossorigin href="{% static 'myauth/css/base-Cunkq7eF.css' %}">
 </head>
 <body class="bg-body-light dark:bg-body-dark transition-all duration-300 font-roboto">
-
-
-{% block body %}  <!-- Блок для основного содержимого страницы, который можно переопределить в дочерних шаблонах -->
+{% block body %}
     Base Body
 {% endblock %}
 
-
-
+{% block extra_js %}
+    <!-- Блок для подключения дополнительных JavaScript-файлов, который можно переопределить в дочерних шаблонах -->
+{% endblock %}
 </body>
 </html>
