--- a/lazy_ilya/myauth/templates/myauth/login.html
+++ b/lazy_ilya/myauth/templates/myauth/login.html
@@ -1,16 +1,15 @@
 {% extends "myauth/base.html" %}
 {% load static %}
-
 {% block title %}
     Вход
 {% endblock %}
-
-{% block body %}  <!-- Блок для основного содержимого страницы, который можно переопределить в дочерних шаблонах -->
+{% block body %}
     <main class="flex justify-center items-center h-screen">
         <form class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 transition-colors duration-300">
 
             <!-- Переключатель темы внутри формы -->
-            <button id="theme-toggle" type="button" class="absolute top-4 right-4 text-yellow-500 dark:text-yellow-400">
+            <button id="theme-toggle" type="button"
+                    class="theme-toggle">
                 <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg"
                      fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                      stroke="currentColor" class="w-6 h-6 hidden">
@@ -19,7 +18,7 @@
               c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752
               A9.753 9.753 0 0 0 3 11.25
               C3 16.635 7.365 21 12.75 21
-              a9.753 9.753 0 0 0 9.002-5.998Z"/>
+              a9.753 9.753 0 0 0 9.002-5.998Z"></path>
                 </svg>
                 <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" xmlns="http://www.w3.org/2000/svg"
                      fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
@@ -28,7 +27,7 @@
               m-4.773-4.227-1.591 1.591M5.25 12H3
               m4.227-4.773L5.636 5.636
               M15.75 12a3.75 3.75 0 1 1-7.5 0
-              3.75 3.75 0 0 1 7.5 0Z"/>
+              3.75 3.75 0 0 1 7.5 0Z"></path>
                 </svg>
             </button>
 
@@ -36,36 +35,61 @@
 
             <div>
                 <label for="username" class="block mb-2  font-medium text-text-light dark:text-text-dark">Логин</label>
-                <input type="text" id="username" name="username"
-                       class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
-                       placeholder="Имя пользователя"
-                >
+                <div class="relative">
+                    <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                             viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-6 text-gray-500 dark:text-gray-400" id="login-icon">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963
+                      0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12
+                      21a8.966 8.966 0 0 1-5.982-2.275M15
+                      9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"></path>
+                        </svg>
+                    </div>
+                    <input type="text" id="username" name="username"
+                           class="w-full ps-12 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                           placeholder="Имя пользователя"
+                    >
+                </div>
             </div>
-
             <div>
                 <div class="flex justify-between items-center mb-2">
                     <label for="password" class="text-text-light dark:text-text-dark font-medium">Пароль</label>
                     <a href="#" class="text-sm text-blue-500 hover:underline dark:text-blue-400">Забыли пароль?</a>
                 </div>
-                <input type="password" id="password" name="password"
-                       class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
-                       placeholder="Пароль"
-                >
-            </div>
 
+                <div class="relative">
+                    <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-6 text-gray-500 dark:text-gray-400">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"></path>
+                        </svg>
+                    </div>
+
+                    <input type="password" id="password" name="password"
+                           class="w-full ps-12 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                           placeholder="Пароль"
+                    >
+                </div>
+
+
+            </div>
             <div class="flex justify-center items-center">
                 <button type="submit"
-                        class="w-50 py-2 text-text-light dark:text-text-dark bg-button hover:bg-hover-button rounded font-semibold transition-colors">
+                        class="btn-submit">
                     Войти
                 </button>
             </div>
-
-
             <p class="text-center text-sm text-text-light dark:text-text-dark">
                 Нет аккаунта?
                 <a href="#" class="text-blue-500 hover:underline dark:text-blue-400">Зарегистрироваться</a>
             </p>
         </form>
     </main>
+{% endblock %}
+{% block extra_js %}
+
 {% endblock %}
 
