--- a/lazy_ilya/myauth/templates/myauth/registration.html
+++ b/lazy_ilya/myauth/templates/myauth/registration.html
@@ -1,71 +1,211 @@
-{% extends "myauth/base.html" %}
+{% extends 'myauth/base.html' %}
 {% load static %}
 
 {% block title %}
-    Вход
+    Регистрация
 {% endblock %}
 
-{% block body %}  <!-- Блок для основного содержимого страницы, который можно переопределить в дочерних шаблонах -->
-    <main class="flex justify-center items-center h-screen">
-        <form class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 transition-colors duration-300">
+{% block body %}
+    <main class="flex justify-center items-center min-h-screen py-6">
+        <form id="registration-form"
+              class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 overflow-y-auto">
 
             <!-- Переключатель темы внутри формы -->
-            <button id="theme-toggle" type="button" class="absolute top-4 right-4 text-yellow-500 dark:text-yellow-400">
-                <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg"
-                     fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                     stroke="currentColor" class="w-6 h-6 hidden">
+            <button id="theme-toggle" type="button" class="theme-toggle">
+                <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                     stroke-width="1.5" stroke="currentColor" class="w-6 h-6 hidden">
                     <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75
-              c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752
-              A9.753 9.753 0 0 0 3 11.25
-              C3 16.635 7.365 21 12.75 21
-              a9.753 9.753 0 0 0 9.002-5.998Z"/>
+                          d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"></path>
                 </svg>
-                <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" xmlns="http://www.w3.org/2000/svg"
-                     fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" xmlns="http://www.w3.org/2000/svg" fill="none"
+                     viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21
-              m-4.773-4.227-1.591 1.591M5.25 12H3
-              m4.227-4.773L5.636 5.636
-              M15.75 12a3.75 3.75 0 1 1-7.5 0
-              3.75 3.75 0 0 1 7.5 0Z"/>
+                          d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"></path>
                 </svg>
             </button>
 
-            <h2 class="text-3xl font-logo text-center text-text-light dark:text-white">Вход</h2>
+            <h2 class="text-3xl font-logo text-center text-text-light dark:text-white">Регистрация</h2>
 
             <div>
-                <label for="username" class="block mb-2  font-medium text-text-light dark:text-text-dark">Логин</label>
-                <input type="text" id="username" name="username"
-                       class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
-                       placeholder="Имя пользователя"
-                >
-            </div>
+                <label for="login-input"
+                       class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                       id="login-label">
+                    Логин
+                </label>
+                <div class="relative">
+                    <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                             viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-6 text-gray-500 dark:text-gray-400" id="login-icon">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963
+                      0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12
+                      21a8.966 8.966 0 0 1-5.982-2.275M15
+                      9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"></path>
+                        </svg>
+                    </div>
 
-            <div>
-                <div class="flex justify-between items-center mb-2">
-                    <label for="password" class="text-text-light dark:text-text-dark font-medium">Пароль</label>
-                    <a href="#" class="text-sm text-blue-500 hover:underline dark:text-blue-400">Забыли пароль?</a>
+                    <input type="text" id="login-input"
+                           class="w-full ps-12 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                           placeholder="Придумайте логин">
                 </div>
-                <input type="password" id="password" name="password"
-                       class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
-                       placeholder="Пароль"
-                >
+
+                <p id="login-error-msg" class="hidden mt-2 text-sm text-red-600 dark:text-red-500">
+                    <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
+                </p>
             </div>
 
-            <div class="flex justify-center items-center">
-                <button type="submit"
-                        class="w-50 py-2 text-text-light dark:text-text-dark bg-button hover:bg-hover-button rounded font-semibold transition-colors">
-                    Войти
+
+            <div>
+                <label for="first-name"
+                       class="block mb-2 font-medium text-text-light dark:text-text-dark"
+                       id="first-name-label">
+                    Имя
+                </label>
+
+                <input type="text" id="first-name" name="first-name"
+                       class="w-full ps-4 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                       placeholder="Имя"
+                >
+
+                <p id="first-name-error-msg" class="hidden mt-2 text-sm text-red-600 dark:text-red-500">
+                    <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
+                </p>
+            </div>
+
+            <div>
+                <label for="last-name"
+                       class="block mb-2 font-medium text-text-light dark:text-text-dark"
+                       id="last-name-label">
+                    Фамилия
+                </label>
+
+                <input type="text" id="last-name" name="last-name"
+                       class="w-full ps-4 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                       placeholder="Фамилия"
+                >
+
+                <p id="last-name-error-msg" class="hidden mt-2 text-sm text-red-600 dark:text-red-500">
+                    <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
+                </p>
+            </div>
+
+            <div class="mb-4">
+                <label id="phone-label" for="phone" class="block mb-2 font-medium text-text-light dark:text-text-dark">
+                    <div class="flex items-center justify-between">
+                        <span>Телефон</span>
+                        <div class="relative group">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 fill="none" viewBox="0 0 24 24"
+                                 stroke-width="1.5" stroke="currentColor"
+                                 class="size-6 text-gray-500 dark:text-gray-400 cursor-pointer">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                      d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0
+                     1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442
+                     -.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0
+                     9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"></path>
+                            </svg>
+
+                            <!-- Tooltip -->
+                            <div
+                                    class="absolute right-0 bottom-full mb-1 w-auto whitespace-nowrap p-2 text-center text-sm text-white bg-gray-700 rounded shadow-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300 z-10">
+                                Номер телефона нужен для восстановления пароля.
+                            </div>
+                        </div>
+                    </div>
+                </label>
+                <div class="relative">
+                    <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-6 text-gray-500 dark:text-gray-400">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3"></path>
+                        </svg>
+                    </div>
+
+                    <input
+                            type="tel"
+                            id="phone"
+                            name="phone"
+                            placeholder="+7 (___) ___-__-__"
+                            class="w-full ps-12 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                    >
+                </div>
+
+
+                <!-- блок ошибки -->
+                <p id="phone-error" class="mt-1 text-sm text-red-500 hidden">
+                    Введите корректный номер телефона.
+                </p>
+            </div>
+
+
+            <div>
+                <label id="password-label" for="password"
+                       class="block mb-2 font-medium text-text-light dark:text-text-dark">Пароль</label>
+                <div class="relative">
+                    <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-6 text-gray-500 dark:text-gray-400">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"></path>
+                        </svg>
+                    </div>
+                    <input type="password" id="password" name="password"
+                           class="w-full ps-12 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                           placeholder="Пароль"
+                    >
+                </div>
+                <!-- блок ошибки -->
+                <p id="password-error" class="mt-1 text-sm text-red-500 hidden">
+                    Придумайте пароль длиннее 5 символов.
+                </p>
+            </div>
+
+            <div>
+                <label id="confirm-password-label" for="confirm-password"
+                       class="block mb-2 font-medium text-text-light dark:text-text-dark">Подтверждение
+                    пароля</label>
+                <div class="relative">
+                    <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-6 text-gray-500 dark:text-gray-400">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"></path>
+                        </svg>
+                    </div>
+                    <input type="password" id="confirm-password" name="confirm-password"
+                           class="w-full ps-12 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                           placeholder="Повторить ввод пароля"
+                    >
+                </div>
+                <!-- блок ошибки -->
+                <p id="confirm-password-error" class="mt-1 text-sm text-red-500 hidden">
+                    Кожаный, будь внимательнее! Пароли не совпали.
+                </p>
+            </div>
+
+            <div class="flex justify-center items-center space-x-4">
+                <button id="submit-btn" type="submit"
+                        class="btn-submit">
+                    Зарегистрироваться
+                </button>
+                <button type="button" onclick="window.location.href='/'"
+                        class="btn-cancel">
+                    Отменить
                 </button>
             </div>
 
-
             <p class="text-center text-sm text-text-light dark:text-text-dark">
-                Нет аккаунта?
-                <a href="#" class="text-blue-500 hover:underline dark:text-blue-400">Зарегистрироваться</a>
+                Уже есть аккаунт?
+                <a href="/login" class="text-blue-500 hover:underline dark:text-blue-400">Войти</a>
             </p>
         </form>
     </main>
 {% endblock %}
+{% block extra_js %}
+    <script type="module" src="{%  static 'myauth/js/registration-D88XDv0Y.js' %}"></script>
+{% endblock %}
+
+
 
