--- a/lazy_ilya/myauth/templates/myauth/login.html
+++ b/lazy_ilya/myauth/templates/myauth/login.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
     <main class="flex justify-center items-center h-screen">
-        <form method="POST"
+        <form method="POST" action="{% url 'myauth:login' %}"
               class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 animate-fade-in">
             {% csrf_token %}
             <!-- Переключатель темы внутри формы -->
@@ -35,7 +35,7 @@
             <h2 class="text-3xl font-logo text-center text-text-light dark:text-white">Вход</h2>
             <!-- Ошибка авторизации -->
             {% if form.non_field_errors %}
-                <div class="text-red-600 text-sm text-center">
+                <div id="non-field-errors"  class="text-red-600 text-sm text-center">
                     {% for error in form.non_field_errors %}
                         {{ error }}
                     {% endfor %}
@@ -106,9 +106,6 @@
         </form>
 
     </main>
-    <div class=" text-5xl text-blue-600 border-red-600">
-        <p>some test message</p>
-    </div>
 {% endblock %}
 
 {% block extra_js %}
